Add section on certainty and death
Added a new section discussing the concepts of certainty and death, including interpretations of related verses and the relationship between worship and certainty.

--- a/index.html
+++ b/index.html
@@ -1322,10 +1322,66 @@ Knowing all this, if there are some people who continue living a normal, money-m
  </section>
   
 
-    <section>
+  <section>
     <h2>ارتباطات آیات در مورد وحی به حواریون</h2>
     <p>
       سوره آل‌عمران آیه ۵۲ و سوره مائده آیه ۱۱۱ خیلی شبیه اند. شاید یک برداشت این باشد که وحی به حواریون به واسطه عیسی (ع) بوده است. یعنی عیسی (ع) خود جزء وسائط وحی است.
+    </p>
+  </section>
+
+  <section>
+    <h2>یقین و مرگ</h2>
+    <p>
+      وَ اعْبُدْ رَبَّكَ حَتَّى يَأْتِيَكَ الْيَقِينُ
+<br>
+پروردگارت را بندگی کن تا یقین به تو برسد. میبینیم که یقین به تو میرسد و نه تو به یقین! یقین دادنی است، نه گرفتنی :)
+<br>
+در خیلی ترجمه‌ها یقین رو به مرگ ترجمه کردن و این البته هماهنگ هم هست با اون مکانیزم آمدن و همینطور برای مثال با آیه وَكُنَّا نُكَذِّبُ بِيَوْمِ الدِّينِ ‎﴿٤٦﴾‏ حَتَّىٰ أَتَانَا الْيَقِينُ ‎﴿٤٧﴾‏ که فلان فرد در جهنم میگه ما تکذیب کننده بودیم تا اینکه مرگ به ما رسید. 
+<br>
+حالا چطور میشه این رو توضیح داد.
+<br>
+برای مثال در آیه ۳ سوره بقره داریم: وَبِالْآخِرَةِ هُمْ يُوقِنُونَ. و در آیه ۷۵ سوره انعام داریم وَكَذَٰلِكَ نُرِي إِبْرَاهِيمَ مَلَكُوتَ السَّمَاوَاتِ وَالْأَرْضِ وَلِيَكُونَ مِنَ الْمُوقِنِينَ. هر دو یوقنون و موقنین رو معمولا چیزی شبیه "یقین دارند" ترجمه میکنند. که این شاید به خاطر نداشتن معادل درست است.
+<br>
+یوقنون فعل مضارع است و موقنین اسم فاعل. معادل اولی قاعدتا چیزی شبیه "می‌یقینند" :-) یا "یقین می‌آورند" ! است، و دومی "یقین دارند".
+<br>
+<br>
+الغرض: به نظر میاید ماجرا از این قرار است: آدم‌ها در روند هدایت در راستای یقین حرکت میکنند، یوقنون (فعل). پس از آن وقتی به اندازه کافی پیش رفتند و لیاقتشان ثابت شد، یقین به آنها میرسد و از موقنین (اسم) میشوند.
+<br>
+همه انسان‌ها، با رسیدن مرگ، یقین به آنها میرسد. روشن است.
+<br>
+<br>
+یقین ارتباط داره به دیدن بهشت و جهنم: كَلَّا لَوْ تَعْلَمُونَ عِلْمَ الْيَقِينِ ‎﴿٥﴾‏ لَتَرَوُنَّ الْجَحِيمَ ‎﴿٦﴾ ثُمَّ لَتَرَوُنَّهَا عَيْنَ الْيَقِينِ ‎﴿٧﴾ یعنی محک یقین داشتن این است که آیا فرد بهشت و جهنم را میبیند یا خیر.
+<br>
+اگر به یک کمیت دارای درجات یا حتی پیوسته (continuous) تبدیلش کنیم میتونیم بگیم متر و معیار مقدار یقین، مقدار ادراک بهشت و جهنم است. حالا هر یک از آدمیان مقداری از بهشت و جهنم ادراک دارن. و همونطور که میفهمیم مرگ یک نقطه عطف همگانی برای این ادراک است.
+<br>
+حالا اگر این پست https://t.me/c/1153702875/48230
+رو مجددا در نظر بگیریم، متوجه میشیم که مرگ این بدن فیزیکی لازمه این درجه از یقین نیست. اگر کسی برای خداوند از خودگذشتگی کنه، در حالت حدی (extreme) مرگ برای خدا رو کاملا بپذیره، با اون فرد هم معامله کسی میشه که از دنیا رفته و آن فرد هم لایق رسیدن یقین میشود.
+<br>
+از این نقطه عطف به بعد هم کماکان درجاتی هست: علم الیقین، عین الیقین و حق الیقین
+<br>
+<br>
+حالا میتونیم مکانیزم رو اینطور توضیح بدیم:
+<br>
+۱- به هرکسی مقداری یقین داده شده و معادلا مقداری دریافت از بهشت و جهنم داره (مثلا در قالب شنیده‌ها و خوانده‌ها در کتب آسمانی و حس خوشی و ناراحتی در درون خودش). درباره این سهم که داره، برش لفظ موقن (اسم) کلی صدق میکنه.
+<br>
+۲- حالا یوقن (فعل) اینه که براساس این مقدار دریافتش، مقداری از این وجود دم‌دستیش برای خدا میگذره: "اعْبُدْ رَبَّكَ"، بندگی پروردگارش رو میکنه. وجود دم‌دستی خودش رو کمتر در نظر میگیره، بیشتر تسلیم خدا میشه.
+<br>
+۳- این لایقش میکنه که یقین بیشتری بهش بدن، دریافت بیشتری از بهشت و جهنم پیدا میکنه.
+<br>
+۴- وقتی کاملا از این وجود بدنی/مادی/فیزیکی/... گذشت (چه با وقوع مرگ و چه با پذیرش کامل مرگ برای خدا ولو اینکه واقع نشده هنوز)، دیگه در قید و بند این وجود مادی نیست، یقینی بهش داده میشه که در این روند نقطه عطفی هست؛ به نام: علم الیقین. حالا بهشت و جهنم رو میبینه. لَوْ تَعْلَمُونَ عِلْمَ الْيَقِينِ ‎﴿٥﴾‏ لَتَرَوُنَّ الْجَحِيمَ. برای این افراد لفظ موقن با معنی خاص صدق میکنه. مشابه معنی‌ای که برای ابراهیم (ع) استفاده شده در آیه ۷۵ سوره انعام: لِيَكُونَ مِنَ الْمُوقِنِينَ
+<br>
+۵- مرحله بعد دیدن بهشت و جهنم به صورت عین الیقین هست: ثُمَّ لَتَرَوُنَّهَا عَيْنَ الْيَقِينِ
+<br>
+۶- مرحله بعد مرحله‌ایه که در حال سوال و جواب شدنه: ثُمَّ لَتُسْأَلُنَّ يَوْمَئِذٍ عَنِ النَّعِيمِ
+<br>
+۷- به نظر میرسه آخرین درجه، درجه حق الیقین است (واقعه ۹۵، حاقه ۵۱). حالا یا این همان مرحله قبله یا چیزی فرای اون. (هنوز به نتیجه‌‌ قطعی‌ای نرسیدم ولی فکر میکنم بعد از اونه).
+<br>
+<br>
+پس ما یک دور خودتقویت‌کننده (reinforcing feedback loop) داریم بین این ۳ چیز که همدیگر رو تقویت میکنن: بندگی پروردگار - آمدن یقین - درک بهشت و جهنم (دیاگرام پایین). یک نقطه عطف در میانه آن است که با مرگ حاصل میشه حالا یا مرگ رخ هم میده یا فرد خودش رو کاملا آماده اون کرده (مثل ابراهیم (ع) یا سحره در مقابل فرعون یا مومن آل فرعون). از این جهت که این مرحله نقطه عطفی است یقین و مرگ رو مترادف گرفته‌اند و از یک لفظ برای اشاره به دیگری استفاده کرده‌اند.
+<br>
+از جهت دیگری هم میشه این ترادف بین یقین و مرگ رو برقرار کرد و اون اینکه رسیدن هر درجه‌ای از یقین معادله با کنار گذاشتن مقداری از وجود دم‌دستی و تحویل دادنش به خداوند؛ چون همونقدر عبدتر و تسلیم‌تر شده.
+<br>
+پ.ن.: در این قرائت: توصیه عارفانه موتوا قبل عن تموتوا (بمیرید قبل از اینکه بمیرید) راهنمایی برای رسیدن به این درجه خاص از یقین هم هست.
     </p>
   </section>
 
