Add image for Yaqin and Seeding the Heaven feedback
Added an image to reinforce the feedback concept.

--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,8 @@ Knowing all this, if there are some people who continue living a normal, money-m
 از جهت دیگری هم میشه این ترادف بین یقین و مرگ رو برقرار کرد و اون اینکه رسیدن هر درجه‌ای از یقین معادله با کنار گذاشتن مقداری از وجود دم‌دستی و تحویل دادنش به خداوند؛ چون همونقدر عبدتر و تسلیم‌تر شده.
 <br>
 پ.ن.: در این قرائت: توصیه عارفانه موتوا قبل عن تموتوا (بمیرید قبل از اینکه بمیرید) راهنمایی برای رسیدن به این درجه خاص از یقین هم هست.
+    <br>
+      <img src="yaqin-feedback.jpeg" alt="Reinforcing feedback between Yaqin and Seeding the Heaven">
     </p>
   </section>
 
