--- a/index.html
+++ b/index.html
@@ -1387,6 +1387,12 @@ Knowing all this, if there are some people who continue living a normal, money-m
     </p>
   </section>
 
+<section>
+<h2>سوره هود و یهود</h2>
+<p>
+سوره هود شامل داستانهای قبل از حضرت موسی (ع) است و در آن ۳ بار به حضرت موسی (ع) و کتاب ایشان اشاره شده. میشه گفت به داستانهای داخل کتاب موسی (ع) پرداخته شده.
+</p>
+</section>
 
 </body>
 </html>
