--- a/index.html
+++ b/index.html
@@ -1394,5 +1394,61 @@ Knowing all this, if there are some people who continue living a normal, money-m
 </p>
 </section>
 
+<section>
+<h2>غابرین</h2>
+<p>
+كَانَتْ مِنَ الْغَابِرِينَ ‎﴿٨٣﴾
+<br>
+قَدَّرْنَا ۙ إِنَّهَا لَمِنَ الْغَابِرِينَ ‎﴿٦٠﴾
+<br>
+عَجُوزًا فِي الْغَابِرِينَ ‎﴿١٧١﴾
+<br>
+قَدَّرْنَاهَا مِنَ الْغَابِرِينَ ‎﴿٥٧﴾
+<br>
+كَانَتْ مِنَ الْغَابِرِينَ ‎﴿٣٢﴾
+<br>
+كَانَتْ مِنَ الْغَابِرِينَ ‎﴿٣٣﴾
+<br>
+عَجُوزًا فِي الْغَابِرِينَ ‎﴿١٣٥﴾
+<br>
+<br>
+
+اینها ۷باری هست که در قرآن زن لوط توصیف شده است. همواره با لفظ "غابرین". هیچ گاه صفت دیگری مثل ظالمین، مجرمین، مفسدین و ... که در داستان‌های دیگر و از جمله خود داستان لوط (ع) برای افراد منفی آمده استفاده نشده است. از طرف دیگر کلا یکبار دیگر لغتی از ریشه غبر در قرآن داریم و آن آیه وَوُجُوهٌ يَوْمَئِذٍ عَلَيْهَا غَبَرَةٌ است. پس لغت غابرین بسیار لغت خاصی است که اینجا استفاده شده است. پس گوینده کاملا قصد داشته که نظر ما را به این لغت جلب کند. ۷بار یک لغت خیلی خاص "غابرین" و نه چیزی دیگر.
+<br>
+<br>
+لطفا همینجا مکث کنید و صورت مساله را دوباره با خود تکرار کنید. تاکید دارم که متوجه نکته عجیب ماجرا بشوید.
+<br>
+<br>
+<br>
+بنده به بهترین توجیهی که رسیدم که کاربرد این لغت و تاکید خالص روی آن را توجیه میکند این است:
+<br>
+نقطه‌های لغت غابرین را در نظر نگیرید: "عاٮرٮں" (اگر در متن درست دیده نمیشود به عکس بالا توجه کنید). با نقطه‌گذاری مجدد و اگر صرفا آن شکستگی را خیلی نبینیم لغت "عایش" میشود.
+<br>
+همانطور که در آیه دوم و چهارم در بالا میبینیم، "ها" در ساختاری نه چندان روان جابه‌جا شده است. همچنین یکبار فرموده قدرناها من الغابرین تحت الفظی یعنی "ها" را کوتاه کردیم از غابرین. یکبار هم گفته قدرنا انها لمن الغابرین یعنی کوتاه کردیم، "ها" از غابرین است. پس "ها" را به "عایش" اضافه میکنیم: "عایشه"
+<br>
+در غابرین ۲ نقطه بالا است و ۳ نقطه پایین، در عایشه ۳ نقطه بالا است و ۲ نقطه پایین؟ ۲بار در آیات زیر در مورد عذاب عذاب قوم لوط میفرماید جعلنا عالیها سافلها، بالا و پایینش را جابه‌جا کردیم. اگر به صورت عائشة بنویسیم؟ ۲بار گفته شده که بر آنها باران سنگ باریدیم! پس نقاط بالا پائین قابل جابه‌جایی هستن و اگر نقطه لازم داشتیم میتوانیم اضافه کنیم.
+<br>
+<br>
+فَلَمَّا جَاءَ أَمْرُنَا جَعَلْنَا عَالِيَهَا سَافِلَهَا وَأَمْطَرْنَا عَلَيْهَا حِجَارَةً مِّن سِجِّيلٍ مَّنضُودٍ ‎﴿٨٢﴾ مُّسَوَّمَةً عِندَ رَبِّكَ ۖ وَمَا هِيَ مِنَ الظَّالِمِينَ بِبَعِيدٍ ‎﴿٨٣﴾
+<br>
+فَجَعَلْنَا عَالِيَهَا سَافِلَهَا وَأَمْطَرْنَا عَلَيْهِمْ حِجَارَةً مِّن سِجِّيلٍ ‎﴿٧٤﴾ إِنَّ فِي ذَٰلِكَ لَآيَاتٍ لِّلْمُتَوَسِّمِينَ ‎﴿٧٥﴾
+<br>
+مُّسَوَّمَةً عِندَ رَبِّكَ لِلْمُسْرِفِينَ ‎﴿٣٤﴾‏
+<br>
+<br>
+و ۳بار در ماجرای قول لوط اشاره به نشانه گذاری میکند که در آیات بالا پررنگ شده است. از دو ریشه "وسم" و "سوم" که در اشتقاق کبری با ریشه "سمو" که "اسم" از آن است یکی است. هم در آیات نشانه‌گذاری شده است برای نشانه شناسان و هم این نشانه در مورد اسم است.
+<br>
+ضمنا آن شکستگی عایش بدون نقطه و غابرین بدون نقطه، شاید مرتبط با آن عجوز باشد که ۲بار در توصیف زن لوط از آن استفاده شده.
+<br>
+توجه بفرمایید که در این پردازش، از موضوعاتی استفاده کردیم که در بیان داستان قوم لوط در قرآن لااقل ۲بار تکرار شده، در صورتی که برای کاربرد معمول بیان یکبار هم کافی بود.
+<br>
+پ.ن.: در سوره تحریم که با ۲ نفر از زنان پیامبر با تهدید شدید صحبت میشود به زن نوح و زن لوط اشاره شده. طبق روایات آن دو زن پیامبر حفصه و عایشه اند. حفصه مثل زن نوح ظهور و بروز کمی دارد (فقط ۱بار در قرآن) ولی عایشه مثل زن لوط ظهور و بروز زیادی دارد (لااقل ۷بار).
+<img src="qaberin_nodots.jpeg" alt="Qaberin no dots">
+<img src="qaberin_ayesha1.jpeg" alt="Qaberin Ayesha">
+<img src="qaberin_ayesha2.jpeg" alt="Qaberin Ayesha">
+<img src="qaberin_ayesha3.jpeg" alt="Qaberin Ayesha">
+</p>
+</section>
+
 </body>
 </html>
