--- a/index.html
+++ b/index.html
@@ -1444,9 +1444,9 @@ Knowing all this, if there are some people who continue living a normal, money-m
 <br>
 پ.ن.: در سوره تحریم که با ۲ نفر از زنان پیامبر با تهدید شدید صحبت میشود به زن نوح و زن لوط اشاره شده. طبق روایات آن دو زن پیامبر حفصه و عایشه اند. حفصه مثل زن نوح ظهور و بروز کمی دارد (فقط ۱بار در قرآن) ولی عایشه مثل زن لوط ظهور و بروز زیادی دارد (لااقل ۷بار).
 <img src="qaberin_nodots.jpeg" alt="Qaberin no dots">
-<img src="qaberin_ayesha1.jpeg" alt="Qaberin Ayesha">
-<img src="qaberin_ayesha2.jpeg" alt="Qaberin Ayesha">
-<img src="qaberin_ayesha3.jpeg" alt="Qaberin Ayesha">
+<img src="qaberin_ayesha1.png" alt="Qaberin Ayesha">
+<img src="qaberin_ayesha2.png" alt="Qaberin Ayesha">
+<img src="qaberin_ayesha3.png" alt="Qaberin Ayesha">
 </p>
 </section>
 
